--- a/tmux/tmux.conf_2.6
+++ b/tmux/tmux.conf_2.6
@@ -18,3 +18,20 @@ bind ^A select-pane -t :.*
 
 # Don't output garbage to the screen when copying
 set-option -s set-clipboard off
+
+# Better navigation
+bind-key b last-window
+
+# Meta = Alt
+bind -n C-M-h previous-window
+bind -n C-M-l next-window
+bind -n C-M-Left previous-window
+bind -n C-M-Right next-window
+
+# Move around faster
+bind -n M-h select-pane -L
+bind -n M-j select-pane -D
+bind -n M-k select-pane -U
+bind -n M-l select-pane -R
+
+set -g history-limit 50000
