--- a/tmux/tmux.conf_2.6
+++ b/tmux/tmux.conf_2.6
@@ -34,4 +34,9 @@ bind -n M-j select-pane -D
 bind -n M-k select-pane -U
 bind -n M-l select-pane -R
 
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
 set -g history-limit 50000
