Use solarized colorscheme, fix compatibility with tmux 2.6

--- a/tmux/tmux.conf_2.6
+++ b/tmux/tmux.conf_2.6
@@ -40,3 +40,6 @@ bind k select-pane -U
 bind l select-pane -R
 
 set -g history-limit 50000
+
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",*256col*:Tc"
