--- a/tmux/tmux.conf_2.6
+++ b/tmux/tmux.conf_2.6
@@ -43,3 +43,5 @@ set -g history-limit 50000
 
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256col*:Tc"
+
+set allow-rename off
