--- a/tmux/tmux.conf_2.6
+++ b/tmux/tmux.conf_2.6
@@ -22,11 +22,9 @@ set-option -s set-clipboard off
 # Better navigation
 bind-key b last-window
 
-# Meta = Alt
-bind -n C-M-h previous-window
-bind -n C-M-l next-window
-bind -n C-M-Left previous-window
-bind -n C-M-Right next-window
+# Shift left and right to move a round
+bind -n S-Left  previous-window
+bind -n S-Right next-window
 
 # Move around faster
 bind -n M-h select-pane -L
