--- a/tmux/tmux.conf_2.6
+++ b/tmux/tmux.conf_2.6
@@ -42,8 +42,6 @@ set -g history-limit 50000
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 
-set allow-rename off
-
 set -g status-position bottom
 set -g status-bg colour234
 set -g status-fg colour137
@@ -55,5 +53,10 @@ set -g status-left-length 20
 setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
 setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
 
-bind-key -n M-[ previous-window
-bind-key -n M-] next-window
+unbind C-h
+unbind C-j
+bind-key -n C-h previous-window
+bind-key -n C-j next-window
+
+bind-key -T copy-mode-vi WheelUpPane send-keys -X scroll-up
+bind-key -T copy-mode-vi WheelDownPane send-keys -X scroll-down
